--- a/src/app/ricknmorty/ricknmorty.component.html
+++ b/src/app/ricknmorty/ricknmorty.component.html
@@ -25,3 +25,8 @@
   </mat-card>
 
 </div>
+<mat-paginator [length]=data.info.count
+               (page)="changePage($event)"
+               [pageSize]="20"
+               [pageSizeOptions]="[ 20, 50, 100]">
+</mat-paginator>
